fix: reordered dom button order on mobile view

--- a/packages/web-components/src/components/va-button-pair/va-button-pair.scss
+++ b/packages/web-components/src/components/va-button-pair/va-button-pair.scss
@@ -4,7 +4,7 @@
 
 @import '../../global/formation_overrides';
 
-:host {
+:host, .button-group {
   display: flex;
   flex-direction: column;
 }
@@ -20,13 +20,12 @@
   .usa-button-group {
     margin: 0 auto;
     width: 100%;
-    flex-direction: column-reverse;
   }
 }
 
 /* Original Component Styles. */
 
-:host(:not([uswds])) va-button {
+:host(:not([uswds])), .button-group va-button {
   flex: 1 1 auto;
 }
 
@@ -34,58 +33,55 @@
   max-width: 560px;
 }
 
-:host(:not([uswds])) va-button::part(button) {
+:host(:not([uswds])) va-button::part(button), .button-group va-button::part(button) {
   max-width: 280px;
   width: 100%;
 }
 
 @media (min-width: 481px) {
-  :host([continue]:not([continue='false']):not([uswds])) {
+  :host([continue]:not([continue='false']):not([uswds])), .button-group {
     flex-direction: row;
   }
 
-  :host([continue]:not([continue='false']):not([uswds])) va-button + va-button::part(button) {
+  :host([continue]:not([continue='false']):not([uswds])) va-button + va-button::part(button), .button-group va-button + va-button::part(button) {
     margin-left: 12px;
     margin-right: 0;
   }
 }
 
 @media (min-width: 481px) {
-  :host(:not([uswds])) {
+  :host(:not([uswds])), .button-group {
     flex-direction: row;
     max-width: 420px;
   }
 
-  :host(:not([uswds])) va-button + va-button::part(button) {
+  :host(:not([uswds])) va-button + va-button::part(button), .button-group va-button + va-button::part(button) {
     margin-left: 12px;
     margin-right: 0;
   }
 
-  :host(:not([uswds])) va-button::part(button) {
+  :host(:not([uswds])) va-button::part(button), .button-group va-button::part(button) {
     max-width: 210px;
   }
 }
 
 @media (max-width: 481px) {
-  :host(:not([uswds])) {
+  :host(:not([uswds])), .button-group {
     width: 100%;
   }
 
-  :host([continue]:not([continue='false']):not([uswds])) va-button::part(button) {
+  :host([continue]:not([continue='false']):not([uswds])) va-button::part(button), .button-group va-button::part(button) {
     max-width: 280px;
-  }
-  :host([continue]:not([continue='false'])) {
-    flex-direction: column-reverse;
   }
 }
 
 @media (max-width: 320px) {
-  :host(:not([uswds])) {
+  :host(:not([uswds])), .button-group {
     margin: 0 auto;
     max-width: 280px;
   }
 
-  :host([continue]:not([continue='false']):not([uswds])) va-button::part(button) {
+  :host([continue]:not([continue='false']):not([uswds])) va-button::part(button), .button-group va-button::part(button) {
     max-width: 280px;
   }
 }
